refactor: better experience and reusable components for ChatWidget

--- a/apps/chat-widget/index.html
+++ b/apps/chat-widget/index.html
@@ -9,9 +9,10 @@
       body {
         margin: 0;
         padding: 20px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-          'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-          'Helvetica Neue', sans-serif;
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+          "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+          sans-serif;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         min-height: 100vh;
         display: flex;
@@ -83,7 +84,10 @@
           </p>
 
           <h3>Environment</h3>
-          <p>Make sure the API server is running on port 3001 (or the port specified in your <code>.env</code> file).</p>
+          <p>
+            Make sure the API server is running on port 3001 (or the port
+            specified in your <code>.env</code> file).
+          </p>
 
           <h3>Quick Start</h3>
           <pre><code># Start the API server
