feat: ChatWidget ui improvements

--- a/apps/chat-widget/index.html
+++ b/apps/chat-widget/index.html
@@ -66,10 +66,10 @@
         font-size: 13px;
       }
 
-      /* #chat-widget-demo {
-        --jexity-assistant-bg-chat-message-user: #ff0000;
+      #chat-widget-demo {
+        --jexity-assistant-bg-chat-message-user: #667eea;
         --jexity-assistant-text-chat-message-user: #ffffff;
-      } */
+      }
     </style>
   </head>
   <body>
