feat: styles in chat now customizable

--- a/apps/chat-widget/index.html
+++ b/apps/chat-widget/index.html
@@ -66,9 +66,45 @@
         font-size: 13px;
       }
 
+      /* Smoke-test palette override for header + user bubble.
+         Uncomment the block below to verify CSS variable plumbing.
+         */
+
       #chat-widget-demo {
-        --jexity-assistant-bg-chat-message-user: #667eea;
-        --jexity-assistant-text-chat-message-user: #ffffff;
+        --jexity-assistant-bg-chat-message-user: #bbf7d0;
+        --jexity-assistant-text-chat-message-user: #064e3b;
+        --jexity-assistant-border-chat-message-user: #34d399;
+        --jexity-assistant-bg-chat-header: #065f46;
+        --jexity-assistant-text-color-chat-header: #ecfdf5;
+        --jexity-assistant-border-color-chat-header: #34d399;
+        --jexity-assistant-icon-color-chat-header: #a7f3d0;
+        --jexity-assistant-bg-chat-header-icon-hover: #047857;
+        --jexity-assistant-bg-chat-message-agent: #ecfdf5;
+        --jexity-assistant-text-chat-message-agent: #065f46;
+        --jexity-assistant-border-chat-message-agent: #befae3;
+        --jexity-assistant-bg-chat-container: #f0fdf4;
+        --jexity-assistant-bg-chat-trigger: #047857;
+        --jexity-assistant-bg-chat-trigger-hover: #065f46;
+        --jexity-assistant-icon-color-chat-trigger: #ecfdf5;
+        --jexity-assistant-bg-chat-input: #ecfdf5;
+        --jexity-assistant-border-chat-input: #34d399;
+        --jexity-assistant-text-chat-input: #065f46;
+        --jexity-assistant-placeholder-chat-input: #14b8a6;
+        --jexity-assistant-text-chat-input-counter: #0f766e;
+        --jexity-assistant-bg-chat-send-button: #0f766e;
+        --jexity-assistant-bg-chat-send-button-hover: #0d9488;
+        --jexity-assistant-bg-chat-send-button-disabled: #99f6e4;
+        --jexity-assistant-icon-color-chat-send-button: #ecfdf5;
+        --jexity-assistant-icon-color-chat-send-button-disabled: #065f46;
+        --jexity-assistant-bg-citation-pill: #ecfdf5;
+        --jexity-assistant-text-citation-pill: #065f46;
+        --jexity-assistant-border-citation-pill: #34d399;
+        --jexity-assistant-bg-citation-pill-hover: #d1fae5;
+        --jexity-assistant-text-citation-pill-hover: #022c22;
+        --jexity-assistant-border-citation-pill-hover: #14b8a6;
+        --jexity-assistant-bg-citation-pill-muted: #dcfce7;
+        --jexity-assistant-text-citation-pill-muted: #065f46;
+        --jexity-assistant-border-citation-pill-muted: #86efac;
       }
     </style>
   </head>
