feat: ChatWidget UI/UX improvements

--- a/apps/chat-widget/index.html
+++ b/apps/chat-widget/index.html
@@ -105,6 +105,13 @@
         --jexity-assistant-bg-citation-pill-muted: #dcfce7;
         --jexity-assistant-text-citation-pill-muted: #065f46;
         --jexity-assistant-border-citation-pill-muted: #86efac;
+        --jexity-assistant-bg-landing-hero: #0f766e;
+        --jexity-assistant-text-landing-hero: #ecfdf5;
+        --jexity-assistant-text-landing-body: #065f46;
+        --jexity-assistant-text-landing-body-subtext: #0f766e;
+        --jexity-assistant-bg-landing-cta: #ecfdf5;
+        --jexity-assistant-text-landing-cta: #047857;
+        --jexity-assistant-bg-landing-cta-icon: #10b981;
       }
     </style>
   </head>
